// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`section-title > renders defaults 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"donut-chart"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"donut-chart__grid"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__title"[39m
      [36m>[39m
        [0mDonut chart title[0m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__metric"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"donut-chart__metric-value"[39m
        [36m>[39m
          [0m174 Total[0m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"donut-chart__metric-label"[39m
        [36m>[39m
          [0m3.78% return rate[0m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__graph"[39m
        [33mdata-marko-key[39m=[32m"9 s0"[39m
        [33mid[39m=[32m"ebay-donut-graph-s0"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__legend"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"chart-legend"[39m
        [36m>[39m
          [36m<dl[39m
            [33mclass[39m=[32m"chart-legend__list"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 1[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m20[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 2[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m40[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 3[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m50[0m
              [36m</dd>[39m
            [36m</div>[39m
          [36m</dl>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders with five values 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"donut-chart"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"donut-chart__grid"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__title"[39m
      [36m>[39m
        [0mDonut chart with five values[0m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__metric"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"donut-chart__metric-value"[39m
        [36m>[39m
          [0m174 Total[0m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"donut-chart__metric-label"[39m
        [36m>[39m
          [0m3.78% return rate[0m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__graph"[39m
        [33mdata-marko-key[39m=[32m"9 s0"[39m
        [33mid[39m=[32m"ebay-donut-graph-s0"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__legend"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"chart-legend"[39m
        [36m>[39m
          [36m<dl[39m
            [33mclass[39m=[32m"chart-legend__list"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 1[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m20[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 2[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m40[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 3[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m50[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 4[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m30[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 5[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m10[0m
              [36m</dd>[39m
            [36m</div>[39m
          [36m</dl>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders with no metrics 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"donut-chart"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"donut-chart__grid"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__title"[39m
      [36m>[39m
        [0mDonut chart title, no metrics[0m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__graph"[39m
        [33mdata-marko-key[39m=[32m"9 s0"[39m
        [33mid[39m=[32m"ebay-donut-graph-s0"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__legend"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"chart-legend"[39m
        [36m>[39m
          [36m<dl[39m
            [33mclass[39m=[32m"chart-legend__list"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 1[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m20[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 2[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m40[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 3[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m50[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 4[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m30[0m
              [36m</dd>[39m
            [36m</div>[39m
          [36m</dl>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;

exports[`section-title > renders with two values 1`] = `
"[36m<DocumentFragment>[39m
  [36m<div[39m
    [33mclass[39m=[32m"donut-chart"[39m
  [36m>[39m
    [36m<div[39m
      [33mclass[39m=[32m"donut-chart__grid"[39m
    [36m>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__title"[39m
      [36m>[39m
        [0mDonut chart with two values[0m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__metric"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"donut-chart__metric-value"[39m
        [36m>[39m
          [0m174 Total[0m
        [36m</div>[39m
        [36m<div[39m
          [33mclass[39m=[32m"donut-chart__metric-label"[39m
        [36m>[39m
          [0m3.78% return rate[0m
        [36m</div>[39m
      [36m</div>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__graph"[39m
        [33mdata-marko-key[39m=[32m"9 s0"[39m
        [33mid[39m=[32m"ebay-donut-graph-s0"[39m
      [36m/>[39m
      [36m<div[39m
        [33mclass[39m=[32m"donut-chart__legend"[39m
      [36m>[39m
        [36m<div[39m
          [33mclass[39m=[32m"chart-legend"[39m
        [36m>[39m
          [36m<dl[39m
            [33mclass[39m=[32m"chart-legend__list"[39m
          [36m>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 1[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m20[0m
              [36m</dd>[39m
            [36m</div>[39m
            [36m<div[39m
              [33mclass[39m=[32m"chart-legend__item"[39m
            [36m>[39m
              [36m<dt[39m
                [33mclass[39m=[32m"chart-legend__label"[39m
              [36m>[39m
                [0mPortion 2[0m
              [36m</dt>[39m
              [36m<dd[39m
                [33mclass[39m=[32m"chart-legend__value"[39m
              [36m>[39m
                [0m40[0m
              [36m</dd>[39m
            [36m</div>[39m
          [36m</dl>[39m
        [36m</div>[39m
      [36m</div>[39m
    [36m</div>[39m
  [36m</div>[39m
[36m</DocumentFragment>[39m"
`;
